2009-11-19  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildResult.cs: Fix
	  build on windows.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild.csproj: Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Add missing file.
